force-app/main/default/objects/Colonia__c/Colonia__c.object-meta.xml
<CustomObject>
    <label>Colonia</label>
    <nameField>
        <label>Nombre de Colonia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colonias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>