force-app/main/default/objects/Colonia__c/fields/Codigo_Colonia__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Colonia__c</fullName>
    <label>Código Colonia</label>
    <length>25</length>
    <type>Text</type>
</CustomField>