force-app/main/default/objects/Colonia__c/fields/Codigo_municipio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_municipio__c</fullName>
    <label>Código municipio</label>
    <length>25</length>
    <type>Text</type>
</CustomField>