force-app/main/default/objects/Colonia__c/fields/Codigo_Municipio_Colonia__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Municipio_Colonia__c</fullName>
    <externalId>true</externalId>
    <label>Código Municipio Colonia</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>