force-app/main/default/objects/Colonia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo_Colonia__c</columns>
    <columns>Codigo_Municipio_Colonia__c</columns>
    <columns>Codigo_municipio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MARGARITA</value>
    </filters>
    <label>Todos</label>
</ListView>